# firstbuild

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  spec.md  workflow-audit.md
.claude/: settings.json
.claude/commands/: qg.md  scaffold.md  tdd.md  test.md  verify.md
src/task_cli/: __main__.py  cli.py  store.py  tasks.py
tests/: test_cli.py  test_cli_due_date.py  test_cli_priority.py  test_store.py  test_store_due_date.py  test_store_priority.py  test_tasks.py  test_tasks_due_date.py  test_tasks_edge_cases.py  test_tasks_priority.py
